--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body background="img/parquet.jpg">
     <div class="accueil">
     <div class="title">Assouline Ilan</div>    
-    <div class="tablette"></div>
+    <div class="tablette">
+        <img src="img/play.png" alt="boutonPlay">
+    </div>
     </div>
     <!-- <div class="backgroundScroll">
         <img src="img/screen.jpg" alt="fond d'ecran de l'appareil" class="screenImg"> 
