changement taille devices

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="script.js"></script>
 </head>
-<body background="img/parquet.jpg">
+<body >
     <div class="accueil">
     <div class="title">Assouline Ilan</div>    
     <div class="tablette">
