--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body >
     <div class="accueil">
-    <div class="title">Assouline Ilan</div>    
+    <p class="title">Assouline Ilan</p>    
     <div class="tablette">
         <img src="img/play.png" alt="boutonPlay">
     </div>
