--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <link rel="stylesheet" href="css/frameMain.css" />
     <link rel="stylesheet" href="css/frameEcranAccueil.css" />
     <script src="JS/EcranAccueil.js"></script>
+    <script src="JS/EcranMain.js"></script>
 </head>
 <body >
-    <div class="accueil">
+    <div class="frameMain">
     <p class="title">Assouline Ilan</p>    
     <div class="tablette">
-        <img src="img/play.png" alt="boutonPlay">
+        <img src="img/play.png" alt="boutonPlay" class="play">
     </div>
     </div>
-    <!-- <div class="backgroundScroll">
-        <img src="img/screen.jpg" alt="fond d'ecran de l'appareil" class="screenImg"> 
+    <div class="frameAccueil">
+        <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
+        <span class="title1"></span>   
     </div>
-       -->
+    
 
       
 </body>
