Réglage de l'horloge  avec ajout du 0 quand c'est inferieur à 10

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div>
     <div class="frameAccueil">
         <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
-        <span class="title1"></span>   
+        <span class="heure"></span>   
+        <select>owo</select>
     </div>
     
 
