ajout du design mot de passe

--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 </head>
 <body >
     <div class="frameMain">
-    <p class="title">Assouline Ilan</p>    
-    <div class="tablette">
-        <img src="img/play.png" alt="boutonPlay" class="play">
+        <p class="title">Assouline Ilan</p>    
+        <div class="tablette">
+            <img src="img/play.png" alt="boutonPlay" class="play">
+        </div>
     </div>
-    </div>
+    <!--Frame de l'ecran de verrouillage avec le mot de passe et l'heure--> 
     <div class="frameAccueil">
         <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
-        <span class="heure"></span>   
-        <select>owo</select>
+        <span class="heure"></span>
+        <div class="mdp">
+        <div class= "points"></div>
+        <div class="numbers"></div>
+        </div>
     </div>
     
 
