--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover, user-scalable=no, shrink-to-fit=no" />
+    <meta name="HandheldFriendly" content="true">
     <title>Ilan Assouline</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/general.css" />
@@ -14,7 +15,7 @@
 </head>
 <body >
     <div class="frameMain">
-        <p class="title">Assouline Ilan</p>    
+        <p class="title">Assouline Ilan.</p>    
         <div class="tablette">
             <img src="img/play.png" alt="boutonPlay" class="play">
         </div>
