--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body >
     <div class="frameMain">
-        <p class="title">Assouline Ilan</p>    
+        <p class="title">Assouline Ilan.</p>    
         <div class="tablette">
             <img src="img/play.png" alt="boutonPlay" class="play">
         </div>
