--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover, user-scalable=no, shrink-to-fit=no" />
-    <meta name="HandheldFriendly" content="true">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    
     <title>Ilan Assouline</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/frameMain.css" />
     <link rel="stylesheet" href="css/frameEcranAccueil.css" />
-    <script src="JS/EcranAccueil.js"></script>
     <script src="JS/EcranMain.js"></script>
+    <script src="JS/EcranAccueil.js"></script>
+   
 </head>
 <body >
     <div class="frameMain">
-        <p class="title">Assouline Ilan2</p>    
+        <p class="title">Assouline Ilan</p>    
         <div class="tablette">
             <img src="img/play.png" alt="boutonPlay" class="play">
         </div>
@@ -25,8 +26,10 @@
         <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
         <span class="heure"></span>
         <div class="mdp">
+        <div class="tryTxt">Essaye (0 0 0 0)</div>
         <div class= "points"></div>
         <div class="numbers"></div>
+        <div class="frameEcranApplication"></div>
         </div>
     </div>
     
