--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/frameMain.css" />
     <link rel="stylesheet" href="css/frameEcranAccueil.css" />
+    <link rel="stylesheet" href="css/frameEcranApplication.css" />
     <script src="JS/EcranMain.js"></script>
     <script src="JS/EcranAccueil.js"></script>
    
@@ -26,12 +27,16 @@
         <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
         <span class="heure"></span>
         <div class="mdp">
-        <div class="tryTxt">Essaye (0 0 0 0)</div>
-        <div class= "points"></div>
-        <div class="numbers"></div>
-        <div class="frameEcranApplication"></div>
+            <div class="tryTxt">Essaye (0 0 0 0)</div>
+            <div class= "points"></div>
+            <div class="numbers"></div>      
         </div>
     </div>
+    <div class="frameEcranApplication">
+        <img src="img/fondEcranApplication.jpg" alt="fond d'ecran derrière les applications" class='backgroundApplication'>
+    </div>
+   
+
     
 
       
