Ajout des design des applications

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/frameEcranApplication.css" />
     <script src="JS/EcranMain.js"></script>
     <script src="JS/EcranAccueil.js"></script>
+    <script src="JS/EcranApplication.js"></script>
    
 </head>
 <body >
@@ -22,18 +23,22 @@
             <img src="img/play.png" alt="boutonPlay" class="play">
         </div>
     </div>
-    <!--Frame de l'ecran de verrouillage avec le mot de passe et l'heure--> 
+    <!--Frame ecran de verrouillage avec le mot de passe et l'heure--> 
     <div class="frameAccueil">
         <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
         <span class="heure"></span>
         <div class="mdp">
             <div class="tryTxt">Essaye (0 0 0 0)</div>
-            <div class= "points"></div>
+            <div class="points"></div>
             <div class="numbers"></div>      
         </div>
     </div>
+    <!--Frame ecran applications -->
     <div class="frameEcranApplication">
         <img src="img/fondEcranApplication.jpg" alt="fond d'ecran derrière les applications" class='backgroundApplication'>
+        <div class="notifications"></div>
+        <div class="applicationsTop"></div>
+        <div class="applicationsBottom"></div>    
     </div>
    
 
