Suppression des vh dans les applications

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <div class="applicationsTop"></div>
         <div class="applicationsBottom"></div>    
     </div>
+      <!--Frame application du projets -->
+      <div class="frameApplicationProjets">
+        <div class="notifications"></div>
+        <div class="navigationInternet"></div>
+    </div>
    
 
     
