--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="css/frameMain.css" />
     <link rel="stylesheet" href="css/frameEcranAccueil.css" />
     <link rel="stylesheet" href="css/frameEcranApplication.css" />
+    <link rel="stylesheet" href="css/frameEcranProjets.css" />
     <script src="JS/EcranMain.js"></script>
     <script src="JS/EcranAccueil.js"></script>
     <script src="JS/EcranApplication.js"></script>
+    <script src="JS/EcranProjets.js"></script>
    
 </head>
 <body >
@@ -28,7 +30,7 @@
         <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
         <span class="heure"></span>
         <div class="mdp">
-            <div class="tryTxt">Essaye (0 0 0 0)</div>
+            <p class="tryTxt">Essaye (0 0 0 0)</p>
             <div class="points"></div>
             <div class="numbers"></div>      
         </div>
@@ -43,7 +45,13 @@
       <!--Frame application du projets -->
       <div class="frameApplicationProjets">
         <div class="notifications"></div>
-        <div class="navigationInternet"></div>
+        <div class="navigationInternet">
+            <div class="titleSite"></div>
+            <div class="partieTopNavigationInternet">
+
+            </div>
+            <div class="partieBottomNavigationInternet"></div>
+        </div>
     </div>
    
 
