design de la partie projets et ajout du background img pour la page principale

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
    
 </head>
 <body >
-    <div class="frameMain">
-        <p class="title">Assouline Ilan</p>    
+    <div class="frameMain">   
         <div class="tablette">
-            <img src="img/play.png" alt="boutonPlay" class="play">
+            <img src="img/main/play.png" alt="boutonPlay" class="play">
         </div>
+        <p class="title">Assouline Ilan</p>   
     </div>
     <!--Frame ecran de verrouillage avec le mot de passe et l'heure--> 
-    <div class="frameAccueil">
-        <img src="img/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
+    <div class="frameAccueil" >
+        <img src="img/Accueil/screen.jpg" alt="fond d'ecran" class='backgroundAccueil'>
         <span class="heure"></span>
         <div class="mdp">
             <p class="tryTxt">Essaye (0 0 0 0)</p>
@@ -37,21 +37,36 @@
     </div>
     <!--Frame ecran applications -->
      <div class="frameEcranApplication">
-        <img src="img/fondEcranApplication.jpg" alt="fond d'ecran derrière les applications" class='backgroundApplication'>
+        <img src="img/Applications/fondEcranApplication.jpg" alt="fond d'ecran derrière les applications" class='backgroundApplication'>
         <div class="notifications"></div>
         <div class="applicationsTop"></div>
         <div class="applicationsBottom"></div>    
     </div>
       <!--Frame application du projets -->
       <div class="frameApplicationProjets">
-        <div class="notifications"></div>
-        <div class="navigationInternet">
-            <div class="titleSite"></div>
-            <div class="partieTopNavigationInternet">
-
+        <div class="notifications2"></div>
+        <div class="topPage">
+            <div class="titleSite">
+                <p>Accueil</p>
+                <img class="fermerProjets" src="img/Projets/croix.png" alt="croix permettant de fermer l'applications">
             </div>
+            <img class="fermerProjets croix2" src="img/Projets/croix2.png" alt="croix permettant de fermer l'applications">
+        </div>        
+            <div class="partieTopNavigationInternet">
+            <span>
+                <img class="fleche-gauche" src="img/Projets/fleches-gauche.png" alt="fleche retour en arrière by farjul fitrianto">
+                <img class="fleche-gauche-gris" src="img/Projets/fleches-gauche-gris.png" alt="fleche retour en arrière by farjul fitrianto">
+                <img class="fleche-droite" src="img/Projets/fleches-droite.png" alt="fleche retour en avant by farjul fitrianto">
+                <img class="fleche-droite-gris"src="img/Projets/fleches-droite-gris.png" alt="fleche retour en avant by farjul fitrianto">
+                <img src="img/Projets/reload.png" alt="logo reload by mavadee">
+            </span>
+            <div style="display: flex;align-items:center">
+                <img class="cadenas" src="img/Projets/cadenas.png" alt="cadenas by freepik">   
+                <input class="url" value="https://www.projetIlanAssouline.fr/Accueil"></input>
+            </div>
+            </div> 
             <div class="partieBottomNavigationInternet"></div>
-        </div>
+        
     </div>
    
 
