--- a/index.html
+++ b/index.html
@@ -108,9 +108,28 @@
                 <input class="url" value="https://www.CVIlanAssouline.fr/"></input>
             </div>
             </div> 
-            <div class="partieBottomNavigationInternet">
-                <p>CV</p>
-                <div class="cv"></div>
+            <div class=PartieBottomCV>
+                <div class="container">
+                    <div class="timeline">
+                      <ul>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">20th may, 2010</h3>
+                            <h1>Heading 1</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">20th may, 2010</h3>
+                            <h1>Heading 2</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                          </div>
+                        </li>
+                        
+                      </ul>
+                    </div>
+                  </div>
             </div>           
     </div>
     <!-- frame Profil -->
