peaufinement des details

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="tablette">
             <img src="img/main/play.png" alt="boutonPlay" class="play">
         </div>
-        <p class="title">Assouline Ilan</p>   
+        
     </div>
     <!--Frame ecran de verrouillage avec le mot de passe et l'heure--> 
     <!--LE CODE C'EST 0 0 0 0-->
@@ -114,9 +114,9 @@
                       <ul>
                         <li>
                           <div class="timeline-content">
-                            <h3 class="date">20th may, 2010</h3>
-                            <h1>Heading 1</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
+                            <h3 class="date">MAI 2021</h3>
+                            <h1>Stage chez Lilmod et Lelamed</h1>
+                            <p>Creation d'une application web en Symfony</p>
                           </div>
                         </li>
                         <li>
@@ -126,7 +126,6 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur tempora ab laudantium voluptatibus aut eos placeat laborum, quibusdam exercitationem labore.</p>
                           </div>
                         </li>
-                        
                       </ul>
                     </div>
                   </div>
