fix problem vu à la mise en production

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body >
     <div class="frameMain">   
+        <p>SITE WEB EN COURS DE CONSTRUCTION...</p>
         <div class="tablette">
             <img src="img/main/play.png" alt="boutonPlay" class="play">
         </div>
@@ -110,8 +111,7 @@
                             
                         </div>  
                         </div>
-                        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FZGQ4BPY8i2hz2BSgTf5wkC%2FUntitled%3Fnode-id%3D114%253A2090" ></iframe>
-                </div>
+                        </div>
                 <div class="gsbJava"></div>
                 <div class="laFleur"></div>
                 <div class="glpi"></div>
