Fin de la partie GSB Symfony et paufinements des details de chaque pages

--- a/index.html
+++ b/index.html
@@ -110,8 +110,26 @@
                             </div>
                             
                         </div>  
-                        </div>
-                        </div>
+                    </div>
+                    <div class="contraintes-gsb-symfony">
+                    <div class="buttons-interface-symfony">
+                        <button class="buttonMain">MAIN</button>
+                        <button class="buttonAjout">AJOUT</button>
+                        <button class="buttonListe">LISTE</button>
+                    </div>
+                    <div class="interfacegsbsymfony">
+                        <img class="Main-Symfony" src="img/Projets/Accueil-Gsb-Symfony.png" alt="interface Accueil">
+                        <img class="Ajout-Symfony" src="img/Projets/Ajout-Gsb-Symfony.png" alt="Interface ajout">
+                        <img class="Ajout-Symfony" src="img/Projets/Ajout-Visiteur-Gsb-Symfony.png" alt="Interface ajout">
+                        <img class="Ajout-Symfony" src="img/Projets/Ajout-Region-Gsb-Symfony.png" alt="Interface ajout">
+                        <img class="Ajout-Symfony" src="img/Projets/Ajout-Secteur-Gsb-Symfony.png" alt="Interface ajout">
+                        <img class="Liste-Symfony" src="img/Projets/Liste-Gsb-Symfony.png" alt="Interface Liste">
+                        <img class="Liste-Symfony" src="img/Projets/Liste-Visiteur-Gsb-Symfony.png" alt="Interface Liste">
+                        <img class="Liste-Symfony" src="img/Projets/Liste-Region-Gsb-Symfony.png" alt="Interface Liste">
+                        <img class="Liste-Symfony" src="img/Projets/Liste-Secteur-Gsb-Symfony.png" alt="Interface Liste">
+                    </div>
+                </div>   
+                </div>
                 <div class="gsbJava"></div>
                 <div class="laFleur"></div>
                 <div class="glpi"></div>
@@ -155,10 +173,28 @@
                         </li>
                         <li>
                           <div class="timeline-content">
-                            <h3 class="date">septembre 2021 à aujourd'hui</h3>
+                            <h3 class="date">SEPTEMBRE 2021 à AUJOURD'HUI</h3>
                             <h1>Alternance chez Centrale Optique</h1>
                             <p>Création du site e-commerce de la boutique</p>
                            </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="container">
+                    <div class="timeline">
+                      <ul>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">JUIN 2018</h3>
+                            <h1>BAC STI2D OPTION SIN</h1>
+                            </div>
+                        </li>
+                        <li>
+                          <div class="timeline-content">
+                            <h3 class="date">septembre 2020 à aujourd'hui</h3>
+                            <h1>BTS SIO OPTION SLAM</h1>
+                            </div>
                         </li>
                       </ul>
                     </div>
@@ -170,7 +206,7 @@
         <div class="notifications2"></div>
         <div class="topPage">
             <p>Contacts</p>
-            <img class="fermerProjets croixContact" src="img/Projets/croix2.png" alt="croix permettant de fermer l'applications">
+            <img class="fermerProjets croix2" src="img/Projets/croix2.png" alt="croix permettant de fermer l'applications">
         </div>
         <div class="frame-profil-bottom">
         <div class="photo-identite">
