--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     </p> 
                     <div class="contraintes-gsb-java">
                         <h1>Contraintes</h1> 
-                    <ul >
+                    <ul class="listedecontraintes">
                         <ul class="Ressources-contraintes-java">
                             <li> <h2>Ressource</h2></li>
                             <li><img src="img/Projets/uwamp.png" alt="logo uWamp" class="logo-uwamp-java"></li>
