petits détails du sites et ajout de la page laFleur

--- a/index.html
+++ b/index.html
@@ -211,7 +211,15 @@
                     </div>
                 </div>
             </div>
-            <div class="laFleur"></div>
+            <div class="laFleur">
+                <div class="lafleurimg">
+                    <img src="img/Projets/laFleur/lafleur1.png" alt="">
+                    <img src="img/Projets/laFleur/lafleur2.png" alt="">
+                    <img src="img/Projets/laFleur/lafleur3.png" alt="">
+                    <img src="img/Projets/laFleur/lafleur4.png" alt="">
+                    <img src="img/Projets/laFleur/lafleurCrud.png" alt="">
+                </div>
+            </div>
 
 
         </div>
@@ -319,6 +327,12 @@
                             <div class="timeline-content">
                                 <h3 class="date">septembre 2020 à aujourd'hui</h3>
                                 <h1>BTS SIO OPTION SLAM</h1>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-content">
+                                <h3 class="date">septembre 2022 à juin 2023</h3>
+                                <h1>BACHELOR CSI</h1>
                             </div>
                         </li>
                     </ul>
