compression des images pour que la première visite soit plus rapide

--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
                             <div class="timeline-content">
                                 <h3 class="date">MAI 2021</h3>
                                 <h1>Stage chez Lilmod et Lelamed</h1>
-                                <p>Creation d'une application web en Symfony</p>
+                                <p>Optimisation d'une application web en Symfony</p>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-content">
                                 <h3 class="date">SEPTEMBRE 2021 à AUJOURD'HUI</h3>
                                 <h1>Alternance chez Centrale Optique</h1>
-                                <p>Création du site e-commerce de la boutique</p>
+                                <p>Création du site e-commerce</p>
                             </div>
                         </li>
                     </ul>
@@ -460,7 +460,7 @@
                 <div class="volet">
                     <h1>Centrale Optique</h1>
                 </div>
-                <p>Création d'un site web et optimisation du site déja en ligne</p>
+                <p>Création d'un site web et optimisation du site déjà en ligne</p>
                 <button class="en-savoir-plus-experiences">En savoir plus</button>
             </div>
 
