ajout des logos github et linkedin + quelques petits détails de design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
 <body>
     <div class="frameMain">
-        <p>SITE WEB EN COURS DE CONSTRUCTION...</p>
         <div class="tablette">
             <img src="img/main/play.png" alt="boutonPlay" class="play">
         </div>
@@ -404,10 +403,7 @@
             </div>
             <div class="informationsIdentite">
                 <table class="tableauInformation">
-                    <tr>
-                        <td>INTRO :</td>
-                        <td>Bienvenue sur mon Site</td>
-                    </tr>
+                    
                     <tr>
                         <td>AGE :</td>
                         <td>22 ans</td>
@@ -419,6 +415,13 @@
                     <tr>
                         <td>NUMERO :</td>
                         <td>07 83 76 92 91</td>
+                    </tr>
+                    <tr>
+                        <td>RÉSEAUX :</td>
+                        <td class="reseaux-profil">
+                            <a href="https://github.com/ilan990/" target="blank_"><img src="img/Profil/logo-github.png" alt="logo redirection github"></a>
+                            <a href="https://www.linkedin.com/in/ilanassouline/" target="blank_"> <img src="img/Profil/logo-linkedin.png" alt="logo redirection LinkedIn"></a>
+                        </td>
                     </tr>
                 </table>
             </div>
@@ -499,7 +502,7 @@
                         <h1>INFOS</h1>
                         <article>Lilmod et Lelamed est une association à but non lucratif qui a pour but de
                             promouvoir et faciliter l’apprentissage de l’anglais et l’hébreu (lecture, grammaire, etc…)
-                        </article><br><br>
+                        </article>
 
                     </div>
                 </div>
@@ -535,16 +538,16 @@
                     <div class="container-centrale">
                         <ul>
                             <li>Directeur : Gabriel Halioua</li>
-                            <li>Date de création : 2013</li>
+                            <li>Date de création : 1999</li>
                             <li>Nombre d'employés : 3</li>
-                            <li>Chiffre d'affaires : 400 000 €/an</li>
+                            <li>Chiffre d'affaires : 600 000 €/an</li>
                         </ul>
                     </div>
                 </div>
                 <div class="div2">
                     <div class="container-centrale">
                         <h1>Contexte</h1>
-                        <article>Mr Halioua voulait que je règle les problèmes sur son site internet
+                        <article>Mr Halioua souhaité que je règle les problèmes sur le site internet
                             qui permet aux opticiens externe de se connecter pour visualiser differentes
                             teintes de verres.<br>
                             Il m'a aussi demandé de lui creer un site web où il pourrait montrer ses produits.
@@ -554,11 +557,11 @@
                 <div class="div3">
                     <div class="container-infos-centrale">
                         <h1>INFOS</h1>
-                        <article>La société Centrale Optique à été créé par Mr Halioua en 2013.
+                        <article>La société Centrale Optique à été créé par Mr Halioua en 1999.
                             Elle compte aujourd'hui 3 employés. Elle part d'une idée revolutionnaire,
                             reunir le fournisseur et le vendeur. Cette idée mise en place en seulement
                             une année a permis à cette entreprise d'avoir une solide clientèle dès les débuts.</article>
-                        <br><br>
+                        
 
                     </div>
                 </div>
