amelioration de quelques petits details design

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         <div class="notifications2"></div>
         <div class="topPage">
             <p>Contacts</p>
-            <div class="fermerProjets croix2"></div>
+            <div class="fermerProjets croixProfil"></div>
         </div>
         <div class="frame-profil-bottom">
             <div class="photo-identite">
@@ -455,6 +455,7 @@
             <div class="card-stage">
                 <div class="volet">
                     <h1>Lilmod et lelamed</h1>
+                    <img src="img/Experiences/up.png" alt="">
                 </div>
                 <p>Optimisation d'un site web destiné à l'apprentissage des langues.</p>
                 <button class="en-savoir-plus-experiences">En savoir plus</button>
@@ -462,6 +463,7 @@
             <div class="card-stage">
                 <div class="volet">
                     <h1>Centrale Optique</h1>
+                    <img src="img/Experiences/up.png" alt="">
                 </div>
                 <p>Création d'un site web et optimisation du site déjà en ligne</p>
                 <button class="en-savoir-plus-experiences">En savoir plus</button>
@@ -470,11 +472,7 @@
         </div>
 
         <div class="partieBottomNavigationInternet exemple-experiences Lilmod-Et-Lelamed reload">
-
-            <div class="banner-lilmod">
-                <img src="img/Experiences/banner-jeux.jpg" alt="">
                 <h1>Lilmod et Lelamed</h1>
-            </div>
 
             <div class="parent">
                 <div class="div1">
@@ -488,7 +486,7 @@
                 </div>
                 <div class="div2">
                     <div class="container-centrale">
-                        <h1>Contexte</h1>
+                        <h1>CONTEXTE</h1>
                         <article> Le président de l’association m’a chargé
                             d’optimiser le site internet afin de le rendre plus rapide et plus interactif ainsi que la
                             création
@@ -500,8 +498,8 @@
                 <div class="div3">
                     <div class="container-infos-centrale">
                         <h1>INFOS</h1>
-                        <article>Lilmod et Lelamed est une association à but non lucratif qui a pour but de
-                            promouvoir et faciliter l’apprentissage de l’anglais et l’hébreu (lecture, grammaire, etc…)
+                        <article>Lilmod et Lelamed est une association non lucrative qui a pour but de
+                            promouvoir et faciliter l’apprentissage de l’anglais et l’hébreu (lecture, grammaire, etc…) de manière ludique et dynamique.
                         </article>
 
                     </div>
@@ -518,35 +516,35 @@
             </div>
             <br>
             <div class="imglilmod">
+                <div class="avant">
+                    <h4>AVANT</h4>
+                    <img class="lilmodimg" src="./img/Experiences/avant-lilmod.PNG" alt="">
+                </div>
+                <div class="apres">
+                    <h4>APRES</h4>
+                    <img class="lilmodimg" src="./img/Experiences/apres-lilmod.PNG" alt="">
+                </div>
                 
-                <h4>AVANT</h4>
-                <img class="lilmodimg" src="./img/Experiences/avant-lilmod.PNG" alt="">
-                <h4>APRES</h4>
-                <img class="lilmodimg" src="./img/Experiences/apres-lilmod.PNG" alt="">
             </div>
 
 
         </div>
         <div class="partieBottomNavigationInternet exemple-experiences Centrale-Optique reload">
-            <div class="banner-centrale">
-                <img src="img/Experiences/banner-optique.jpg" alt="">
-                <h1>Centrale Optique</h1>
-            </div>
-
+            <h1>Centrale Optique</h1>
             <div class="parent">
                 <div class="div1">
                     <div class="container-centrale">
                         <ul>
                             <li>Directeur : Gabriel Halioua</li>
-                            <li>Date de création : 1999</li>
-                            <li>Nombre d'employés : 3</li>
-                            <li>Chiffre d'affaires : 600 000 €/an</li>
+                            <li>création : 1999</li>
+                            <li>salariés : 3</li>
+                            <li>C.A : 600 000 €/an</li>
                         </ul>
                     </div>
                 </div>
                 <div class="div2">
                     <div class="container-centrale">
-                        <h1>Contexte</h1>
+                        <h1>CONTEXTE</h1>
                         <article>Mr Halioua souhaité que je règle les problèmes sur le site internet
                             qui permet aux opticiens externe de se connecter pour visualiser differentes
                             teintes de verres.<br>
@@ -574,6 +572,7 @@
                 </div>
             </div>
             <br>
+            <h1>Demonstration du site pour les opticiens</h1>
             <div class="imgvpl">
                 <img class="centraleimg" src="./img/Experiences/video-presentation-vpl.gif" alt="">
                 <img class="centraleimg" src="./img/Experiences/vplfrance.PNG" alt="">
