correction des fautes d'orthographe

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                     <p>GSB SYMFONY</p>
                 </div>
                 <h1>CONTEXTE</h1>
-                <p>GSB est la fusion de deux laboratoires pharmaceutique afin de creer un seul et même leader. Le siège
+                <p>GSB est la fusion de deux laboratoires pharmaceutiques afin de créer un seul et même leader. Le siège
                     administratif est
                     à Paris et le siège social à Philadelphie.
                 </p>
-                <h1>PROBLEME</h1>
-                <p>La fusion des deux a demandé une réorganisation des données afin d'optimiser au mieux l'activité du
+                <h1>PROBLÈME</h1>
+                <p>La fusion des deux a entrainé une réorganisation des données afin d'optimiser au mieux l'activité du
                     groupe. Le laboratoire
-                    nous as ainsi demandé la refonte de la partie Visiteur
+                    nous a ainsi demandé la refonte de la partie Visiteur.
                 </p>
                 <div class="contraintes-gsb-symfony">
                     <h1>Contraintes</h1>
@@ -154,10 +154,10 @@
                     administratif est
                     à Paris et le siège social à Philadelphie.
                 </p>
-                <h1>PROBLEME</h1>
-                <p>La fusion des deux a demandé une réorganisation des données afin d'optimiser au mieux l'activité du
+                <h1>PROBLÈME</h1>
+                <p>La fusion des deux a entrainé une réorganisation des données afin d'optimiser au mieux l'activité du
                     groupe. Le laboratoire
-                    nous as ainsi demandé la refonte de la partie Visiteur
+                    nous a ainsi demandé la refonte de la partie Visiteur.
                 </p>
                 <div class="contraintes-gsb-java">
                     <h1>Contraintes</h1>
@@ -523,9 +523,8 @@
                             <h3>Situation</h3>
                             <article>
                                 Le président de l’association m’a chargé
-                                d’optimiser le site internet afin de le rendre plus rapide et plus interactif ainsi que la
-                                création
-                                d’un jeu web pour permettre aux visiteurs d’apprendre l’anglais et l’hébreu de manière
+                                d’optimiser le site internet afin de le rendre plus rapide et plus interactif et de créer également
+                                un jeu web pour permettre aux visiteurs d’apprendre l’anglais et l’hébreu de manière
                                 ludique.
                             </article>
                         </div>
@@ -539,8 +538,8 @@
                         <div class="contexte4">
                             <h3>Développement</h3>
                             <article>
-                                <span>Ressources :</span> Serveur NGINX sur Debian.<br>
-                                <span>Technique :</span> HTML5(Twig) / CSS3 (Zurb Foundation), JS (JQUERY/JSON), PHP (Symfony).<br>
+                                <span>Ressource :</span> Serveur NGINX sur Debian.<br>
+                                <span>Techniques :</span> HTML5(Twig) / CSS3 (Zurb Foundation), JS (JQUERY/JSON), PHP (Symfony).<br>
                             </article>
                         </div>
                     </div>
@@ -612,26 +611,26 @@
                         </div>
                         <div class="contexte2">
                             <h3>Situation</h3>
-                            <article>Mr Halioua souhaité que je règle les problèmes sur le site internet
-                                qui permet aux opticiens externe de se connecter pour visualiser differentes
+                            <article>Mr Halioua a souhaité que je règle les problèmes sur le site internet
+                                qui permet aux opticiens externes de se connecter pour visualiser différentes
                                 teintes de verres.<br>
-                                Il m'a aussi demandé de lui creer un site web où il pourrait montrer ses produits.
+                                Il m'a aussi demandé de lui créer un site e-commerce pour montrer ses produits.
                             </article>
                         </div>
                         <div class="contexte3">
                             <h3>Informations</h3>
-                            <article>La société Centrale Optique à été créé par Mr Halioua en 1999.
-                                Elle compte aujourd'hui 3 employés. Elle part d'une idée revolutionnaire,
-                                reunir le fournisseur et le vendeur. Cette idée mise en place en seulement
+                            <article>La société Centrale Optique a été créée par Mr Halioua en 1999.
+                                Elle compte aujourd'hui 3 salariés. Elle part d'une idée révolutionnaire,
+                                réunir le fournisseur et le vendeur. Cette idée mise en place en seulement
                                 une année a permis à cette entreprise d'avoir une solide clientèle dès les débuts.
                             </article>
                         </div>
                         <div class="contexte4">
                             <h3>Développement</h3>
                             <article>
-                            <span>Technique :</span> L’application devra être développé en HTML5 / CSS3, Javascript ES6
+                            <span>Technique :</span> L’application devra être développée en HTML5 / CSS3, Javascript ES6
                                 avec la bibliothèque JQuery.<br>
-                            <span>Ergonomique :</span> Le code devra être le plus clair et le plus concis possible afin
+                            <span>Ergonomique :</span> Le code doit être le plus clair et le plus concis possible afin
                                 d’éviter
                                 toute perte de temps et toute lenteur. 
                             </article>
